# tauri-includedir

./: README.md  notes.md
.changes/: README.md  codegen-absolute-path.md  config.json  filter-fix.md
.github/WORKFLOWS/: run-version-or-publish.yml
.github/workflows/: covector-status.yml  covector-version-or-publish.yml
codegen/: CHANGELOG.md  Cargo.toml  README.md
codegen/src/: lib.rs
example/: Cargo.toml  build.rs
example/data/: notinclude
example/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
