[package]
name = "tauri_includedir_codegen"
description = "Include a whole directory tree at compile time! - Compile time part"
keywords = ["include", "tree", "directory", "build", "static"]
categories = ["filesystem"]
version = "0.5.1"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "BSD-3-Clause"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"
documentation = "https://docs.rs/includedir_codegen"
readme = "../README.md"
edition = "2018"

[dependencies]
walkdir = "2.2.9"
phf_codegen = "0.8.0"
flate2 = "1.0.13"
