[package]
name = "tauri_includedir_codegen"
description = "Include a whole directory tree at compile time! - Compile time part"
keywords = [ "include", "tree", "directory", "build", "static" ]
categories = [ "filesystem" ]
version = "0.6.2"
authors = [ "Till Höppner <till@hoeppner.ws>" ]
license = "BSD-3-Clause"
repository = "https://github.com/tauri-apps/tauri-includedir"
documentation = "https://docs.rs/tauri_includedir_codegen"
readme = "../README.md"
edition = "2018"

[dependencies]
walkdir = "2.2"
phf_codegen = "0.8.0"
flate2 = "1.0"
