[package]
name = "tauri_includedir_codegen"
description = "This crate was deprecated. It is now part of the `tauri-codegen` crate."
keywords = [ "include", "tree", "directory", "build", "static" ]
categories = [ "filesystem" ]
version = "0.6.3"
authors = [ "Till Höppner <till@hoeppner.ws>" ]
license = "BSD-3-Clause"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"
documentation = "https://docs.rs/includedir_codegen"
readme = "../README.md"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
walkdir = "2.2"
phf_codegen = "0.8.0"
flate2 = "1.0"
