[package]
name = "foo"
version = "0.1.0"
authors = ["Till Höppner <till@hoeppner.ws>"]
build = "build.rs"
include = ["data", "data/*", "data/**"]
publish = false
edition = "2018"

[dependencies]
phf = "0.8.0"
tauri_includedir = { path = "../lib" }

[build-dependencies]
tauri_includedir_codegen = { path = "../codegen" }