[package]
name = "tauri_includedir"
description = "Include a whole directory tree at compile time! - Runtime part"
keywords = ["include", "tree", "directory", "build", "static"]
categories = ["filesystem"]
version = "0.6.0"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "BSD-3-Clause"
repository = "https://github.com/tauri-apps/tauri-includedir"
documentation = "https://docs.rs/tauri_includedir"
readme = "../README.md"
edition = "2018"

[features]
default = ["flate2"]

[dependencies]
phf = "0.8.0"

flate2 = { version = "1.0", optional = true }
