[package]
name = "tauri_includedir"
description = "This crate was deprecated. It is now part of the `tauri-codegen` crate."
keywords = ["include", "tree", "directory", "build", "static"]
categories = ["filesystem"]
version = "0.6.1"
authors = ["Till Höppner <till@hoeppner.ws>"]
license = "BSD-3-Clause"
homepage = "https://github.com/tilpner/includedir"
repository = "https://github.com/tilpner/includedir"
documentation = "https://docs.rs/includedir"
readme = "../README.md"
edition = "2018"

[features]
default = ["flate2"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
phf = "0.8.0"

flate2 = { version = "1.0", optional = true }
